--- a/Stroniax.PowerShell.Extensions.TypeData/Stroniax.PowerShell.TypeDataExtensions.csproj
+++ b/Stroniax.PowerShell.Extensions.TypeData/Stroniax.PowerShell.TypeDataExtensions.csproj
@@ -6,6 +6,19 @@
 	  <LangVersion>8.0</LangVersion>
 	  <Nullable>enable</Nullable>
 	  <PSModuleName>Stroniax.PowerShell.TypeData</PSModuleName>
+	  <PSDebugScript Condition="'$(DebugScript)'==''">$(ProjectDir)Debug.ps1</PSDebugScript>
+	  <PSPrebuildScript Condition="'$(PrebuildScript)'==''">$(ProjectDir)Prebuild.ps1</PSPrebuildScript>
+	  <PSPostbuildScript Condition="'$(PostbuildScript)'==''">$(ProjectDir)Postbuild.ps1</PSPostbuildScript>
+	  <PowerShellPath>%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.exe</PowerShellPath>
+	  <ModuleName>KPBSD.ITMS</ModuleName>
   </PropertyGroup>
+
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="$(PowerShellPath) -NoProfile -ExecutionPolicy RemoteSigned -File $(PSPrebuildScript) -Configuration $(ConfigurationName) -ProjectName $(ProjectName) -TargetName $(TargetName) -TargetPath $(TargetPath) -TargetDirectory $(TargetDir) -ProjectDirectory $(ProjectDir) -ModuleName $(PSModuleName)" />
+  </Target>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="$(PowerShellPath) -NoProfile -ExecutionPolicy RemoteSigned -File $(PSPostbuildScript) -Configuration $(ConfigurationName) -ProjectName $(ProjectName) -TargetName $(TargetName) -TargetPath $(TargetPath) -TargetDirectory $(TargetDir) -ProjectDirectory $(ProjectDir) -ModuleName $(PSModuleName)" />
+  </Target>
 
 </Project>
