--- a/PSSharp.JobExtensions/PSSharp.JobExtensions.csproj
+++ b/PSSharp.JobExtensions/PSSharp.JobExtensions.csproj
@@ -2,10 +2,9 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<RootNamespace>Stroniax.Powershell</RootNamespace>
+		<RootNamespace>PSSharp</RootNamespace>
 		<LangVersion>8.0</LangVersion>
 		<Nullable>enable</Nullable>
-		<PSModuleName>Stroniax.PowerShell.ParameterExtensions</PSModuleName>
 	</PropertyGroup>
 
 	<ItemGroup>
