--- a/PSSharp.ParameterExtensions/PSSharp.ParameterExtensions.csproj
+++ b/PSSharp.ParameterExtensions/PSSharp.ParameterExtensions.csproj
@@ -2,9 +2,10 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<RootNamespace>Stroniax.Powershell</RootNamespace>
+		<RootNamespace>PSSharp</RootNamespace>
 		<LangVersion>8.0</LangVersion>
 		<Nullable>enable</Nullable>
+		<PSModuleName>PSSharp.ParameterExtensions</PSModuleName>
 	</PropertyGroup>
 
 	<ItemGroup>
