--- a/PSSharp.ParameterExtensions/PSSharp.ParameterExtensions.csproj
+++ b/PSSharp.ParameterExtensions/PSSharp.ParameterExtensions.csproj
@@ -12,4 +12,8 @@
 	  <PackageReference Include="PowerShellStandard.Library" Version="5.1.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Completion\" />
+	</ItemGroup>
+
 </Project>
