add completion attributes to cmdlets

--- a/PSSharp.Taskjob/PSSharp.TaskJob.csproj
+++ b/PSSharp.Taskjob/PSSharp.TaskJob.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\PSSharp.Core\PSSharp.Core.csproj" />
 		<ProjectReference Include="..\PSSharp.JobExtensions\PSSharp.JobExtensions.csproj" />
 		<ProjectReference Include="..\PSSharp.AsyncExtensions\PSSharp.AsyncExtensions.csproj" />
 	</ItemGroup>
