--- a/PSSharp.Network/PSSharp.Network.csproj
+++ b/PSSharp.Network/PSSharp.Network.csproj
@@ -31,6 +31,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\PSSharp.Core\PSSharp.Core.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<None Update="Postbuild.ps1">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
