--- a/PSSharp.Network/PSSharp.Network.csproj
+++ b/PSSharp.Network/PSSharp.Network.csproj
@@ -32,6 +32,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\PSSharp.Core\PSSharp.Core.csproj" />
+	  <ProjectReference Include="..\PSSharp.TypeDataDefinitions\PSSharp.TypeDataDefinitions.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
