--- a/PSSharp.Taskjob/PSSharp.TaskJob.csproj
+++ b/PSSharp.Taskjob/PSSharp.TaskJob.csproj
@@ -17,6 +17,7 @@
 		<ProjectReference Include="..\PSSharp.Core\PSSharp.Core.csproj" />
 		<ProjectReference Include="..\PSSharp.JobExtensions\PSSharp.JobExtensions.csproj" />
 		<ProjectReference Include="..\PSSharp.AsyncExtensions\PSSharp.AsyncExtensions.csproj" />
+		<ProjectReference Include="..\PSSharp.TypeDataDefinitions\PSSharp.TypeDataDefinitions.csproj" />
 	</ItemGroup>
 
 </Project>
