--- a/PSSharp.CimProvider/Properties/launchSettings.json
+++ b/PSSharp.CimProvider/Properties/launchSettings.json
@@ -4,6 +4,11 @@
       "commandName": "Executable",
       "executablePath": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
       "commandLineArgs": "-noexit -command & $(ProjectDir)Debug.ps1 -Configuration $(ConfigurationName) -ProjectName $(ProjectName) -TargetName $(TargetName) -TargetPath $(TargetPath) -TargetDirectory $(TargetDir) -ProjectDirectory $(ProjectDir) -ModuleName $(ModuleName)"
+    },
+    "PowerShell Core": {
+      "commandName": "Executable",
+      "executablePath": "C:\\Program Files\\PowerShell\\7\\pwsh.exe",
+      "commandLineArgs": "-noexit -command & $(ProjectDir)Debug.ps1 -Configuration $(ConfigurationName) -ProjectName $(ProjectName) -TargetName $(TargetName) -TargetPath $(TargetPath) -TargetDirectory $(TargetDir) -ProjectDirectory $(ProjectDir) -ModuleName $(ModuleName)"
     }
   }
 }
