--- a/PSSharp.CimProvider/PSSharp.CimProvider.csproj
+++ b/PSSharp.CimProvider/PSSharp.CimProvider.csproj
@@ -28,7 +28,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Management.Infrastructure" Version="2.0.0" />
-		<PackageReference Include="PowerShellStandard.Library" Version="5.1.0" PrivateAssets="all" />
+		<PackageReference Include="PowerShellStandard.Library" Version="5.1.0" />
 		<PackageReference Include="XmlDoc2CmdletDoc" Version="0.3.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
