--- a/PSSharp.JobExtensions/PSSharp.JobExtensions.csproj
+++ b/PSSharp.JobExtensions/PSSharp.JobExtensions.csproj
@@ -11,4 +11,8 @@
 	  <PackageReference Include="PowerShellStandard.Library" Version="5.1.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\PSSharp.AsyncExtensions\PSSharp.AsyncExtensions.csproj" />
+	</ItemGroup>
+
 </Project>
