--- a/PSSharp.Core/PSSharp.Core.csproj
+++ b/PSSharp.Core/PSSharp.Core.csproj
@@ -17,6 +17,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\PSSharp.AsyncExtensions\PSSharp.AsyncExtensions.csproj" />
+	  <ProjectReference Include="..\PSSharp.JobExtensions\PSSharp.JobExtensions.csproj" />
 	  <ProjectReference Include="..\PSSharp.TypeDataDefinitions\PSSharp.TypeDataDefinitions.csproj" />
 	</ItemGroup>
 
