--- a/PSSharp.Providers.Reflection/PSSharp.Providers.Reflection.csproj
+++ b/PSSharp.Providers.Reflection/PSSharp.Providers.Reflection.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-	  <RootNamespace>PSSharp</RootNamespace>
+	  <RootNamespace>PSSharp.Providers</RootNamespace>
 	  <LangVersion>8</LangVersion>
 	  <Nullable>enable</Nullable>
 	  <PSModuleName>PSSharp.AssemblyProvider</PSModuleName>
