update PingJob to derive from AdvancedJobBase

--- a/PSSharp.Network/PSSharp.Network.csproj
+++ b/PSSharp.Network/PSSharp.Network.csproj
@@ -15,7 +15,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-		<DocumentationFile>PSSharp.PingJob.xml</DocumentationFile>
+		<DocumentationFile>PSSharp.Network.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
