--- a/PSSharp.Core/PSSharp.Core.csproj
+++ b/PSSharp.Core/PSSharp.Core.csproj
@@ -18,6 +18,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 	  <PackageReference Include="PowerShellStandard.Library" Version="5.1.0" />
 	</ItemGroup>
 
